# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  task-manager.yml
task_manager/: settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json
task_manager/labels/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_rename_labels_label.py  0003_alter_label_name.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: tasks.json
task_manager/statuses/migrations/: 0001_initial.py  0002_rename_statuses_status.py  0003_alter_status_name.py
task_manager/tasks/: apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_author_alter_tasks_executor.py  0003_tasks_labels.py  0004_alter_tasks_author_alter_tasks_executor.py  0005_rename_tasks_task.py  0006_alter_task_name.py  0007_alter_task_executor.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: create_label.html  delete_label.html  labels_list.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  statuses_list.html  update_status.html
task_manager/templates/tasks/: create_task.html  delete_task.html  task_detail.html  tasks_list.html  update_task.html
task_manager/templates/users/: create_user.html  delete_user.html  update_user.html  user_list.html
task_manager/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py  0002_delete_appuser_appuser.py  0003_delete_appuser.py  0004_initial.py
task_manager/utils/: fixtures.py  tm_utils.py
