[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
dj-database-url = "^1.3.0"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
django-bootstrap4 = "^23.1"
whitenoise = "^6.4.0"
django-crispy-forms = "^2.0"
crispy-bootstrap4 = "^2022.1"
django-extensions = "^3.2.1"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
